--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice-Website</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Practice-Website</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="styles/practice.css" />
+    </head>
+    <body>
+        <header>
+            <div class="heading">
+                <h1 class="heading-title">
+                    All Thinks Are Possible If You believe
+                </h1>
+                <p class="heading-description">
+                    There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some
+                    form, by injected humour, or randomised words
+                </p>
+                <button class="btn-contact">Contact Us</button>
+            </div>
+        </header>
+        <main>
+            <section class="middle">
+                <div class="image"><img src="images/person.png" alt="" /></div>
+                <div class="head-para-list">
+                    <h4 class="second-head">My failures of previous year</h4>
+                    <p class="second-head-description">
+                        Contrary to popular belief, Lorem Ipsum is not simply
+                        random text. It has roots in a piece of classical Latin
+                        literature from 45 BC, making it over 2000 years old.
+                        Richard McClintock.
+                    </p>
+                    <ul class="second-head-list">
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular belief.</li>
+                        <li>Contrary to popular , is not simply.</li>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular simply.</li>
+                    </ul>
+                </div>
+            </section>
+        </main>
+        <footer></footer>
+    </body>
 </html>
