--- a/index.html
+++ b/index.html
@@ -46,7 +46,94 @@
                     </ul>
                 </div>
             </section>
+            <section class="my-plans">
+                <div class="my-plan-items">
+                    <h4 class="third-head">My Plans</h4>
+                </div>
+                <div class="plan">
+                    <div class="my-plan-all-items">
+                        <img
+                            src="images/icons/web.png"
+                            alt=""
+                            class="icon-image"
+                        />
+                        <h5 class="skills">Web Development</h5>
+                        <h6 class="skill-details">I want to start</h6>
+                    </div>
+                    <div class="my-plan-all-items">
+                        <img
+                            src="images/icons/js.png"
+                            alt=""
+                            class="icon-image"
+                        />
+                        <h5 class="skills">Javascript</h5>
+                        <h6 class="skill-details">I want to learn</h6>
+                    </div>
+                    <div class="my-plan-all-items">
+                        <img
+                            src="images/icons/smoke.png"
+                            alt=""
+                            class="icon-image"
+                        />
+                        <h5 class="skills">Smoking Habit</h5>
+                        <h6 class="skill-details">I want to end</h6>
+                    </div>
+                    <div class="my-plan-all-items">
+                        <img
+                            src="images/icons/ecom.png"
+                            alt=""
+                            class="icon-image"
+                        />
+                        <h5 class="skills">ecommerce</h5>
+                        <h6 class="skill-details">I want to develop</h6>
+                    </div>
+                </div>
+            </section>
+            <section class="last-middle">
+                <div class="image1">
+                    <img src="images/gradient1.png" alt="" />
+                    <h4 class="last-middle-heading">
+                        Always keep a positive mindset
+                    </h4>
+                    <button class="call-now">Call Now</button>
+                </div>
+            </section>
         </main>
-        <footer></footer>
+        <footer>
+            <div class="flexible">
+                <div class="column1">
+                    <h4 class="future">Future</h4>
+                    <p class="footer-description">
+                        There are many variations of passages of Lorem Ipsum
+                        available, but the majority have suffered alteration in
+                        some form, by injected humour, or randomised words
+                    </p>
+                    <p class="footer-description">Email : info@gmail.com</p>
+                    <p class="footer-description">Phone : 01500 00 00 00</p>
+                    <img
+                        src="images/icons/fb.png"
+                        alt=""
+                        class="social-links"
+                    />
+                    <img
+                        src="images/icons/twitter.png"
+                        alt=""
+                        class="social-links"
+                    />
+                    <img
+                        src="images/icons/youtube.png"
+                        alt=""
+                        class="social-links"
+                    />
+                </div>
+                <div class="column2">
+                    <h5 class="sub">Subscribe</h5>
+                    <form>
+                        <input type="email" name="" id="" placeholder="Enter Your Email">
+                    </form>
+                    <button class="subscribe">Subscribe</button>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
