--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         literature from 45 BC, making it over 2000 years old.
                         Richard McClintock.
                     </p>
-                    <ul class="second-head-list">
+                    <ul class="checkmark-list">
                         <li>Contrary to popular belief, is not simply.</li>
                         <li>Contrary to popular belief.</li>
                         <li>Contrary to popular , is not simply.</li>
